--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^1.1.1",
     "formik": "^2.1.5",
     "history": "^5.0.0",
+    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
@@ -44,9 +45,11 @@
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.2",
     "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
