--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "react-redux": "^7.2.2",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
