--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "axios": "^0.21.0",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
+    "connected-react-router": "^6.8.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
