--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     ]
   },
   "dependencies": {
+    "@date-io/core": "^2.10.6",
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "axios": "^0.21.0",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
     "connected-react-router": "^6.8.0",
+    "date-fns": "^2.16.1",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
