--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": false,
   "scripts": {
     "start": "react-scripts start",
+    "server": "cd ../innometrics-backend &&  . $INNOMETRICS_BACKEND_PATH/innometricsenv/bin/activate && python3 ./api/app.py",
+    "db" : "sudo service mongod start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
