add login reminder. refactoring

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "react-scripts start",
     "server": "cd ../innometrics-backend &&  . $INNOMETRICS_BACKEND_PATH/innometricsenv/bin/activate && python3 ./api/app.py",
-    "db" : "sudo service mongod start",
+    "db": "sudo service mongod start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,15 +43,18 @@
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
+    "persist": "^0.2.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
+    "react-native-sensitive-info": "^5.5.8",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.2",
     "react-router": "^6.0.0-beta.0",
@@ -59,6 +62,8 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-persist-sensitive-storage": "^1.0.0",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
