--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "@date-io/core": "^2.10.6",
     "@date-io/date-fns": "1.x",
+    "@iconify-icons/mdi": "^1.1.2",
+    "@iconify/react": "^1.1.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
