--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "connected-react-router": "^6.8.0",
     "date-fns": "^2.16.1",
     "formik": "^2.1.5",
+    "gitinspector": "^0.5.0-dev-2",
     "history": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^3.1.2",
