--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
+    "@iconify-icons/logos": "^1.1.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
