--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "@date-io/core": "^2.10.6",
     "@date-io/date-fns": "1.x",
+    "@iconify-icons/logos": "^1.1.4",
     "@iconify-icons/mdi": "^1.1.2",
+    "@iconify-icons/simple-icons": "^1.1.7",
     "@iconify/react": "^1.1.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -41,6 +43,7 @@
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
     "connected-react-router": "^6.8.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "formik": "^2.1.5",
     "gitinspector": "^0.5.0-dev-2",
@@ -49,7 +52,12 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
+    "mongoose": "^5.11.13",
+    "nodemon": "^2.0.7",
     "nprogress": "^0.2.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "persist": "^0.2.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
