--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "gitinspector": "^0.5.0-dev-2",
     "history": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
+    "jsonp": "^0.2.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "mongoose": "^5.11.13",
+    "node-libcurl": "^2.3.0",
     "nodemon": "^2.0.7",
     "nprogress": "^0.2.0",
     "passport": "^0.4.1",
@@ -65,6 +67,7 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
+    "react-native-childprocess": "^0.1.4",
     "react-native-sensitive-info": "^5.5.8",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.2",
