--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 
 # testing
 /coverage
+/sonarscan
+/.scannerwork
 
 # production
 /build
@@ -28,3 +30,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
+.eslintrc
+.prettierignore
+.prettierrc
